apps/dashboard/app/assets/stylesheets/products.scss
// Place all the styles related to the products controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#productCliModal {
  .product-cli-body {
    height: calc(100vh - 300px);
    overflow-y: scroll;
    overflow-x: auto;
  }
}

.new-product-body {
  padding: 10px;
  min-height: 120px;
}

.alert-ssh-key {
  position: relative;

  .pull-left {
    transform: translateY(-50%);
    position: absolute;
    top: 50%;
  }
}

#readme td,
#readme th {
  border: black 1px solid;
  padding: 2px;
}

#readme h1,
#readme h2 {
  border-bottom: 1px solid #eaecef;
  padding-bottom: 4px;
}

#readme pre > code {
  white-space: pre;
}

.container {
  max-width: 100%;
}

